# HeroShooter

./: ABI-Specific Builds  AndroidManifest.xml  CMakeLists.txt  Command Line Build  Directory Tree  FPS  MainActivity.kt  Makefile  Verify Swappy and Oboe Integration  build.gradle.kts  gradle.properties  settings.gradle.kts
.github/workflows/: build.yml
app/: build.gradle.kts
assets/shaders/: mesh.frag  mesh.vert
audio/: AudioEngine.cpp  AudioEngine.h
ecs/: EntityManager.cpp  EntityManager.h
ecs/components/: MovementComponent.h  NetworkComponent.h  TransformComponent.cpp  TransformComponent.h
ecs/systems/: MovementSystem.h  NetworkSystem.cpp  NetworkSystem.h  PhysicsSystem.cpp  PhysicsSystem.h  RenderSystem.cpp  RenderSystem.h
input/: InputManager.cpp  InputManager.h
main/: GameEngine.cpp  GameEngine.h  android_main.cpp
memory/: LinearAllocator.cpp  LinearAllocator.h  MemoryTracker.h  PoolAllocator.cpp  PoolAllocator.h
network/: GamePacket.h  NetworkManager.cpp  NetworkManager.h
physics/: CollisionLayers.h  PhysicsWorld.cpp  PhysicsWorld.h
rendering/: ShaderManager.cpp  ShaderManager.h  VulkanBuffer.cpp  VulkanBuffer.h  VulkanPipeline.cpp  VulkanPipeline.h  VulkanRenderer.cpp  VulkanRenderer.h
states/: GameStateManager.cpp  GameStateManager.h  LoadingState.h
threading/: AtomicQueue.h  JobSystem.cpp  JobSystem.h  ThreadPool.cpp  ThreadPool.h
utils/: Logger.h  Timer.cpp  Timer.h
